@startuml
class screens.TipOfTheDayActivity {
- String[] inspirationalQuotes
# CalendarUtil calendarUtil
- TextView tipContent
- Button btnTipSpeak
- GenerativeModelFutures model
- TextToSpeech tts
- String currentlySpeakingId
# void onCreate(Bundle)
- void toggleSpeech(String,String)
- void updateSpeakButton(String,boolean)
- void checkDailyTip()
- void fetchDailyTipFromAI()
# void onResume()
# void onPause()
+ void onDestroy()
}


class screens.SettingsActivity {
# IFallDetectionService fallDetectionService
- SwitchMaterial switchDarkMode
- SwitchMaterial switchVibration
- SwitchMaterial switchNotifications
- SwitchMaterial switchCamera
- SwitchMaterial switchGallery
- SwitchMaterial switchLocation
- SwitchMaterial switchSms
- SwitchMaterial switchContacts
- SwitchMaterial switchFallDetection
# void onCreate(Bundle)
- void showRedirectDialog()
- void updatePermissionSwitches()
- void refreshSwitches()
# void onResume()
- void handleFallDetectionEnable()
- void checkBackgroundLocationAndEnable()
# void onPermissionsResult(Map<String,Boolean>)
- void disableFallDetection()
- void checkContactsAndEnableFallDetection()
- void updateDarkModeText(SwitchMaterial,boolean)
- void logout()
}


class screens.RegisterActivity {
# CalendarUtil calendarUtil
# Validator validator
- EditText editTextFirstName
- String birthDate
# void onCreate(Bundle)
- void tryRegister()
- boolean validateInput(String,String,String,String,String)
- void openDatePicker()
}


class screens.SplashActivity {
- {static} long SPLASH_DELAY
- Handler handler
- Runnable navigateRunnable
# void onCreate(Bundle)
# void onDestroy()
- void navigateNext()
- void navigateToLandingWithAnimation()
}




bases.BaseActivity <|-- screens.TipOfTheDayActivity
bases.BaseActivity <|-- screens.SettingsActivity
bases.BaseActivity <|-- screens.RegisterActivity
bases.BaseActivity <|-- screens.SplashActivity
@enduml